fixed spelling errors and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,12 @@ ul {
   display: inline-block;
 }
 
+#contact{
+  margin-top:5em;
+}
 
 #portfolioHeader{
+  margin-top:2em;
   font-size: 90px;
   text-align: center;
   padding:2vw;
